--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -610,6 +610,8 @@ font-family: 'Readex Pro', sans-serif;
   --tw-bg-opacity: 1;
   background-color: rgb(254 226 226 / var(--tw-bg-opacity));
   padding: 0.75rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
   font-size: 1.875rem;
   line-height: 2.25rem;
   font-weight: 600;
@@ -661,10 +663,11 @@ font-family: 'Readex Pro', sans-serif;
   margin-left: 0.5rem;
   margin-top: 0px;
   display: flex;
-  height: 13rem;
+  height: 14rem;
   flex-direction: column;
   align-items: center;
   overflow: hidden;
+  overflow-y: hidden;
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
